设置指令属性

--- a/tests/index.html
+++ b/tests/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <div ng-controller="TestCtrl">
-	<ng-simditor content="aa"></ng-simditor>
+	<ng-simditor content="test"></ng-simditor>
 	
 </div>
 </body>
