--- a/tests/index.html
+++ b/tests/index.html
@@ -2,27 +2,42 @@
 <html ng-app="ghostapp">
 <head>
 	<meta charset="utf-8">
-	<script type="text/javascript" src="../bower_components/jquery/dist/jquery.min.js"></script>
-	<script type="text/javascript" src="../bower_components/angular/angular.min.js"></script>
-	<script type="text/javascript" src="../bower_components/simple-module/lib/module.js"></script>
-	<script type="text/javascript" src="../bower_components/simple-hotkeys/lib/hotkeys.js"></script>
-	<script type="text/javascript" src="../bower_components/simple-uploader/lib/uploader.js"></script>
-	<script type="text/javascript" src="../bower_components/simditor/lib/simditor.js"></script>
-	<script type="text/javascript" src="../bower_components/js-beautify/js/lib/beautify.js"></script>
-	<script type="text/javascript" src="../bower_components/js-beautify/js/lib/beautify-css.js"></script>
-	<script type="text/javascript" src="../bower_components/js-beautify/js/lib/beautify-html.js"></script>
-	<script type="text/javascript" src="../bower_components/simditor-html/lib/simditor-html.js"></script>
-	<script type="text/javascript" src="../src/angular-simditor.js"></script>
+	<!-- build:css(.) styles/vendor.css -->
+	<!-- bower:css -->
+	<link rel="stylesheet" href="bower_components/simditor/styles/simditor.css" />
+	<link rel="stylesheet" href="bower_components/simditor-html/styles/simditor-html.css" />
+	<!-- endbower -->
+	<!-- endbuild -->
 
-	<link rel="stylesheet" type="text/css" href="../bower_components/simditor/styles/simditor.css">
-	<link rel="stylesheet" type="text/css" href="../bower_components/simditor-html/styles/simditor-html.css">
 	<title></title>
 </head>
 <body>
 <div ng-controller="TestCtrl">
 	<ng-simditor content="test"></ng-simditor>
-	
+	{{ test }}
 </div>
+
+	<!-- build:js(.) scripts/vendor.js -->
+	<!-- bower:js -->
+	<script src="bower_components/jquery/dist/jquery.js"></script>
+	<script src="bower_components/angular/angular.js"></script>
+	<script src="bower_components/simple-module/lib/module.js"></script>
+	<script src="bower_components/simple-hotkeys/lib/hotkeys.js"></script>
+	<script src="bower_components/simple-uploader/lib/uploader.js"></script>
+	<script src="bower_components/simditor/lib/simditor.js"></script>
+	<script src="bower_components/js-beautify/js/lib/beautify.js"></script>
+	<script src="bower_components/js-beautify/js/lib/beautify-css.js"></script>
+	<script src="bower_components/js-beautify/js/lib/beautify-html.js"></script>
+	<script src="bower_components/simditor-html/lib/simditor-html.js"></script>
+	<!-- endbower -->
+	<!-- endbuild -->
+	
+
+	<!-- build:js({.tmp,tests}) scripts/scripts.js -->
+	<!-- injector:js -->
+	<script src="angular-simditor.js"></script>
+	<script src="app.js"></script>
+	<!-- endinjector -->
+	<!-- endbuild -->
 </body>
-<script type="text/javascript" src="app.js"></script>
 </html>
